--- a/paygo/package.json
+++ b/paygo/package.json
@@ -17,10 +17,12 @@
     "@visactor/react-vchart": "^1.12.10",
     "@visactor/vchart": "^1.12.10",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "firebase": "^12.5.0",
     "firebase-admin": "^13.6.0",
     "google-auth-library": "^10.5.0",
